--- a/index.html
+++ b/index.html
@@ -12,46 +12,54 @@
 <div class="header" data-flex data-flex-direction="vertical">
     <div data-flex data-flex-direction="horizontal" data-flex-weight="1">
         <div class="layers">
-            <canvas class="layerHeader"></canvas>
-            <canvas class="layers"></canvas>
+            <canvas id="layerHeader"></canvas>
+            <canvas id="layers"></canvas>
         </div>
         <div class="keyframes" data-flex-weight="1">
-            <canvas class="frameHeader"></canvas>
-            <canvas class="frames"></canvas>
+            <canvas id="frameHeader"></canvas>
+            <canvas id="frames"></canvas>
         </div>
     </div>
     <div class="controls" style="height: 25px; background-color: #999;">
         <div style="display: inline-block; height:1px; width: 200px;"></div>
         Frame: <input type="number" value="0" min="0" id="frameRange" max="1000"/>
         Frames Per Second: <input type="number" value="12" min="1" max="99" id="FPS" length="2"/>
-        <input type="checkbox" id="playAnimation"/>
+        <div class="checkbox">
+            <input type="checkbox" id="playAnimation"/>
+        </div>
     </div>
 </div>
 <div class="workarea" data-flex-weight="1" style="overflow: scroll;">
     <canvas id="anim-canvas">
     </canvas>
 </div>
+<div class="statusbar" data-flex data-flex-direction="horizontal">
+    <div class="space" style="display: inline-block;height: 100%;float: left;" data-flex-weight="1"></div>
+    <input type="number" min="1" max="900" value="100" id="zoom"/>
+</div>
 <script src="script.js"></script>
 <script src="workarea.js"></script>
 <script>
     var doc;
     var playButton = document.getElementById("playAnimation");
+    var framesPerSecond = document.getElementById("FPS");
     var play = function(){
         setCurrentFrame((getCurrentFrame()+1)%getTotalFrames());
         if(playButton.checked){
-            play.timeout = setTimeout(play, 1000/12);
+            play.timeout = setTimeout(play, 1000/FPS.value);
         }else{
             clearTimeout(play.timeout);
             play.timeout = undefined;
         }
     };
-    playButton.addEventListener("change", function(){
-        if(!play.timeout && this.checked){
+    var playHandler = function(e){
+        if(!play.timeout && e.target.checked){
             play();
         }
-    }, false);
+    };
+    playButton.addEventListener("change", playHandler, false);
     var draw = function(doc){
-        drawTimeline(doc);
+        drawTimeline(doc.documentElement);
         drawWorkspace(doc);
         requestAnimationFrame(function(){draw(doc);});
     };
@@ -59,7 +67,24 @@
         doc = this.responseXML;
         draw(doc);
     });
-    
+    document.addEventListener("click", function(e){
+    var target = e.target;
+	classes = target.className.split(' ');
+	if(classes.indexOf("checkbox")!=-1){
+		checkbox = target.querySelector("input");
+		checkbox.checked = !checkbox.checked;
+        //checkbox.click();
+		var i =classes.indexOf("checked");
+		if(i != -1){
+			classes.splice(i,1);
+		}else if(i==-1){
+			classes.push("checked");
+		}
+		target.className = classes.join(' ');
+        
+        playHandler({target: checkbox});
+	}
+}, false);
 </script>
 </body>
 </html>
